workloads/vaultwarden/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: vaultwarden
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`vault.bapttf.com`)
      kind: Rule
      services:
        - name: vaultwarden
          port: 80
  tls: {}
